--- a/code_BP_rule_2Opt.ipynb
+++ b/code_BP_rule_2Opt.ipynb
@@ -19,7 +19,7 @@
         "id": "zyylgxPB4MIZ"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ivanksinggih/capacitatedVRP_GA_Python_Colab/blob/main/CVRP_GA.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/https://github.com/ivanksinggih/single_machine_scheduling_BP_rule_2Opt/blob/main/code_BP_rule_2Opt.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
