--- a/code_BP_rule_2Opt.ipynb
+++ b/code_BP_rule_2Opt.ipynb
@@ -25,12 +25,7 @@
       "source": [
         "# A. Library import\n",
         "\n",
-        "import numpy as np\n",
-        "import matplotlib.pyplot as plt  # For figure generation\n",
-        "from matplotlib.ticker import FuncFormatter, MaxNLocator  # For figure generation\n",
-        "from decimal import Decimal\n",
         "import time\n",
-        "import pandas as pd\n",
         "\n",
         "details_debug = False"
       ],
@@ -138,7 +133,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bfa61e7e-5c8d-430f-d37a-37fe9d854353"
+        "outputId": "1d05bf4b-fc88-405f-ecde-4806f371b0b6"
       },
       "source": [
         "# D. Binary Programming solving using GUROBI\n",
@@ -219,7 +214,11 @@
           "name": "stdout",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Requirement already satisfied: gurobipy in /usr/local/lib/python3.8/dist-packages (10.0.0)\n",
+            "Collecting gurobipy\n",
+            "  Downloading gurobipy-10.0.0-cp38-cp38-manylinux2014_x86_64.whl (12.8 MB)\n",
+            "\u001b[K     |████████████████████████████████| 12.8 MB 5.1 MB/s \n",
+            "\u001b[?25hInstalling collected packages: gurobipy\n",
+            "Successfully installed gurobipy-10.0.0\n",
             "\n",
             "-----------------------------------------------------\n",
             "Method 1: Binary Programming\n",
@@ -266,7 +265,7 @@
             "x[2,2]: 1\n",
             "x[3,1]: 1\n",
             "x[4,4]: 1\n",
-            "Computational time (CPU time) =  0.08975720405578613 seconds\n",
+            "Computational time (CPU time) =  0.06147193908691406 seconds\n",
             "Run GUROBI with presolving process\n",
             "\n",
             "Discarded solution information\n",
@@ -296,7 +295,7 @@
             "\n",
             "*    0     0               0      48.0000000   48.00000  0.00%     -    0s\n",
             "\n",
-            "Explored 1 nodes (9 simplex iterations) in 0.02 seconds (0.00 work units)\n",
+            "Explored 1 nodes (9 simplex iterations) in 0.04 seconds (0.00 work units)\n",
             "Thread count was 2 (of 2 available processors)\n",
             "\n",
             "Solution count 2: 48 49 \n",
@@ -308,7 +307,7 @@
             "x[2,2]: 1\n",
             "x[3,1]: 1\n",
             "x[4,4]: 1\n",
-            "Computational time (CPU time) =  0.040645599365234375 seconds\n",
+            "Computational time (CPU time) =  0.06543326377868652 seconds\n",
             "-----------------------------------------------------\n"
           ]
         }
@@ -330,7 +329,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9d010a60-0054-45e8-a49a-fad7627b78ec"
+        "outputId": "ad5e632f-ffb5-424e-fe74-df4a26a4392f"
       },
       "source": [
         "# E. Shortest Processing Time rule\n",
@@ -417,7 +416,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e591af72-558d-460f-c0a1-db6f0133dc7d"
+        "outputId": "045e53f3-662e-4f67-d5c1-e1b3ba0dc54c"
       },
       "source": [
         "if \"2Opt\" in selected_methods:\n",
